# rfb-rs

./: .dockerignore  .env.example  .gitignore  .releaserc.json  COMPLETE_SUMMARY.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LICENSE.md  QUICK_START.md  README.md  build.rs  docker-compose.yml  sonar-project.properties
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci-cd.yml  codeql.yml  rust-clippy.yml
docs/: CHANGELOG.md  CI_CD.md  DEVELOPMENT.md  IMPLEMENTATION.md  QUICK_START.md
examples/: demo.md
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  server.rs
src/db/: mod.rs  postgres.rs  schema.rs
src/download/: check.rs  downloader.rs  federal_revenue.rs  mod.rs
src/transform/: cnae.rs  company.rs  lookups.rs  mod.rs  partner.rs  tax_regime.rs  transformer.rs
tests/: api_integration_test.rs  cli_integration_test.rs  database_integration_test.rs  download_integration_test.rs  integration_test.rs  transform_integration_test.rs
