[package]
name = "rfb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Italo A. G. <italo@italo.ag>"]
homepage = "https://github.com/italoag/rfb-rs"
description="rfb-rs - ETL - Receita Federal Brasileira in Rust 🦀"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "etl"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = [
    "etl",
    "receita-federal",
    "command-line",
    "tool",
]
[[bin]]
name = "rfb"
path = "src/main.rs"

[dependencies]
# error dependencies
paris = "1.5"
thiserror = "1.0"

# async
futures = "0.3"
actix-rt = "2.7"

# http
http = "0.2"
url = "2"
awc = { version = "3", features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd", "trust-dns"] }
actix-http = { version = "3", features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd"] }

# crypto dependencies
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }

# tracing dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2"

# etl/dataframe dependencies
polars = "0.24"

# cli/utilities dependencies
clap = { version = "4.0", features = ["derive", "cargo"] }
toml = "0.5"
term_size = "0.3"
ansi_term = "0.12"
percent-encoding = "2"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"
zip = "0.6.2"
color-eyre = "0.6"
reqwest = "0.11"
rand = "0.8.5"
indicatif = "0.17"
names = {version = "0.14", default-features = false}
self_update = "0.32"
#fork = "0.1.20"
cmd_lib = "1.3"
wca = "0.1"
requestty = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
