[package]
name = "rfb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Italo A. G. <italo@italo.ag>"]
homepage = "https://github.com/italoag/rfb-rs"
description="rfb-rs - ETL - Receita Federal Brasileira in Rust 🦀"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "etl"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = [
    "etl",
    "receita-federal",
    "command-line",
    "tool",
]
[[bin]]
name = "rfb"
path = "src/main.rs"

[dependencies]

# error dependencies
paris = "1.5"
thiserror = "1.0"

# async
futures = "0.3"
actix-rt = "2.7"
tokio = { version = "1", features = ["full"] }
actix-web = "4.4"

# http
http = "0.2"
url = "2"
awc = { version = "3", features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd", "trust-dns"] }
actix-http = { version = "3", features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd"] }

# crypto dependencies
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }

# tracing dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2"

# etl/dataframe dependencies
polars = "0.25"

# additional dependencies
regex = "1.7"
walkdir = "2"

#database
postgres = "0.19.4"
postgres-openssl = "0.5.0"
diesel = { version = "2.1", features = ["postgres", "r2d2", "serde_json", "numeric"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }

# cli/utilities dependencies
clap = { version = "4.0", features = ["derive", "cargo"] }
toml = "0.5"
term_size = "0.3"
ansi_term = "0.12"
percent-encoding = "2"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"
zip = "0.6.2"
color-eyre = "0.6"
reqwest = "0.11"
rand = "0.8.5"
indicatif = { version = "0.17", features = ["tokio"] }
names = { version = "0.14", default-features = false, features = ["clap", "application"] }
self_update = "0.32"
#fork = "0.1.20"
cmd_lib = "1.3"
wca = "0.1"
requestty = "0.5"
slog = "2.7.0"
slog-term = "2.9.0"
slog-syslog = "0.13.0"
blake3 = "1.3.1"
derive_more = "0.99"
async-trait = "0.1.58"
inflector-plus = "0.11"
lazy_static = "1.4"
openssl = "0.10"
uuid = { version = "1.2.1", features = ["v4", "v8", "serde", "rand"] }
anyhow = "1.0"
git-testament = "0.2"
itertools = "0.10"
semver = "1.0"
indexmap = "1.9"
generic-array = "0.14"
either = "1.8"
tinyvec = { version = "1.6", features = ["std"] }
cargo-udeps = "0.1"
cargo-sort = "1.0"
serde_json = "1.0"
humansize = "2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
