[package]
name = "rfb-rs"
version = "0.1.0"
edition = "2024"
authors = ["Italo A. G. <italoamorim@gmail.com>"]
homepage = "https://github.com/italoag/rfb-rs"
description="rfb-rs - ETL - Receita Federal Brasileira in Rust 🦀"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "etl"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = [
    "etl",
    "receita-federal",
    "command-line",
    "tool",
]
[[bin]]
name = "rfb"
path = "src/main.rs"

[dependencies]

thiserror = "2.0"

# async / http
futures = "0.3"
tokio = { version = "1", features = ["full"] }
actix-web = "4.12.0"
http = "1.3"
url = "2"

# crypto dependencies
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }

# tracing dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2"

# etl/dataframe dependencies
polars = { version = "0.51", features = ["lazy", "csv", "dtype-full", "serde"] }

# additional dependencies
regex = "1.7"
walkdir = "2"

#database
postgres = "0.19.4"
diesel = { version = "2.1", features = ["postgres", "r2d2", "serde_json", "numeric"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }

# cli/utilities dependencies
clap = { version = "4.0", features = ["derive", "cargo"] }
toml = "0.9"
percent-encoding = "2"
bytes = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
zip = "6.0"
color-eyre = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
rand = "0.9"
indicatif = { version = "0.18", features = ["tokio"] }
#fork = "0.1.20"
blake3 = "1.3.1"
derive_more = "2.0"
async-trait = "0.1.58"
inflector-plus = "0.11"
lazy_static = "1.4"
uuid = { version = "1.18", features = ["v4", "v8", "serde"] }
anyhow = "1.0.100"
itertools = "0.14"
semver = "1.0"
indexmap = "2.12"
generic-array = "1.3"
either = "1.8"
tinyvec = { version = "1.6", features = ["std"] }
serde_json = "1.0"
humansize = "2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# No build dependencies needed anymore

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
